[gd_scene load_steps=29 format=2]

[ext_resource path="res://textures/terrains/goal-2-effects.png" type="Texture" id=1]
[ext_resource path="res://textures/title-background.png" type="Texture" id=2]
[ext_resource path="res://core/triangle_polygon_shape.gd" type="Script" id=3]
[ext_resource path="res://textures/ui/title/slider.png" type="Texture" id=4]
[ext_resource path="res://textures/terrains/goal-1-effects.png" type="Texture" id=5]
[ext_resource path="res://scenes/title.gd" type="Script" id=6]
[ext_resource path="res://textures/ui/title/01.png" type="Texture" id=7]
[ext_resource path="res://textures/ui/title/03.png" type="Texture" id=8]
[ext_resource path="res://textures/ui/title/02.png" type="Texture" id=9]
[ext_resource path="res://textures/ui/title/04.png" type="Texture" id=10]
[ext_resource path="res://textures/ui/title/05.png" type="Texture" id=11]
[ext_resource path="res://textures/ui/title/06.png" type="Texture" id=12]
[ext_resource path="res://textures/ui/title/title.png" type="Texture" id=13]
[ext_resource path="res://textures/ui/title/hidden.png" type="Texture" id=14]
[ext_resource path="res://textures/ui/title/cover.png" type="Texture" id=15]
[ext_resource path="res://resources/fonts/start-en.tres" type="DynamicFont" id=16]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 129, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 258, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 387, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 516, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 129, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 258, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 387, 0, 129, 112 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 516, 0, 129, 112 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 5 ), SubResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 6 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "animated",
"speed": 10.0
} ]

[node name="Title" type="Node2D"]
script = ExtResource( 6 )

[node name="title-background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 735.5
margin_top = 720.0
margin_right = 1184.5
margin_bottom = 782.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "DRAG_TO_START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" type="KinematicBody2D" parent="."]
position = Vector2( 552.125, 821.469 )
z_index = 2
input_pickable = true

[node name="hidden" type="Sprite" parent="Block"]
position = Vector2( -241.327, -68.5636 )
z_index = -1
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Block"]
position = Vector2( 1, -135.557 )
z_index = -1
texture = ExtResource( 4 )
centered = false

[node name="TrianglePolygonShape" type="CollisionPolygon2D" parent="Block"]
polygon = PoolVector2Array( 0, 0, 80.5, -139, 161, 0 )
script = ExtResource( 3 )
enabled = true

[node name="Boundary" type="Node2D" parent="Block"]

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 1206.05, 821.469 )
z_index = 1
gravity_vec = Vector2( 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="TrianglePolygonShape" type="CollisionPolygon2D" parent="Goal"]
visible = false
polygon = PoolVector2Array( 0, 0, 80.5, -139, 161, 0 )
script = ExtResource( 3 )
enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Goal"]
position = Vector2( 15.5, -124 )
z_index = 5
frames = SubResource( 11 )
animation = "up"
frame = 2
playing = true
centered = false

[node name="Title" type="Node2D" parent="."]
position = Vector2( 990, 507 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Title"]
frames = SubResource( 12 )
animation = "idle"
playing = true

[node name="title" type="Sprite" parent="Title"]
texture = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="cover" type="Sprite" parent="."]
position = Vector2( 650.355, 752.085 )
z_index = 1
texture = ExtResource( 15 )
[connection signal="input_event" from="Block" to="." method="_on_Block_input_event"]
[connection signal="mouse_entered" from="Block" to="." method="_on_Block_mouse_entered"]
[connection signal="mouse_exited" from="Block" to="." method="_on_Block_mouse_exited"]
[connection signal="draw" from="Block/Boundary" to="." method="_on_Boundary_draw"]
